webroot/rsrc/css/phui/object-item/phui-oi-list-view.css
/**
 * @provides phui-oi-list-view-css
 */

.phui-oi {
  border-left-width: 0;
}

ul.phui-oi-list-view {
  padding: 8px;
  list-style: none;
}

.device-desktop .phui-oi-list-view {
  padding: 16px;
}

.phui-oi-list-view + .phui-oi-list-view {
  padding-top: 0;
}

.phui-object-box .phui-oi-list-view .phui-oi {
  margin: 0;
}

.phui-oi-list-view .phui-info-view {
  margin: 0;
}

.phui-object-box .phui-oi-list-view .phui-info-view {
  color: {$greytext};
  border: none;
}

.phui-oi {
  border-style: solid;
  border-color: {$lightgreyborder};
  margin: 5px 0;
  overflow: hidden;
  background: {$page.content};
  margin-bottom: 4px;
}

.phui-oi .phui-icon-view {
  display: inline-block;
}

.phui-oi-frame {
  border-color: {$lightblueborder};
  border-width: 1px 1px 1px 0;
  border-style: solid;
  position: relative;
  min-height: 33px;
  overflow: hidden;
}

.phui-oi-cover-image {
  display: none;
}

.phui-oi-no-bar .phui-oi-frame {
  border-width: 1px;
}

.device-desktop .phui-oi {
  margin: 0 0 4px 0;
}

.phui-object-box .phui-oi-list-view {
  margin: 0;
}

.phui-oi-status-icon {
  font-weight: bold;
  padding: 3px;
  font-size: 16px;
}

.phui-oi-list-view .phui-oi-col0 .phui-icon-view {
  width: 17px;
  text-align: center;
  overflow: visible;
  position: relative;
  left: -1px;
}

.phui-oi-name {
  padding: 8px 8px 0;
  white-space: nowrap;
  word-wrap: break-word;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: bold;
  -webkit-font-smoothing: antialiased;
}

.device-phone .phui-oi-name {
  overflow: normal;
  white-space: normal;
  font-weight: bold;
}

.phui-oi-link {
  display: inline;
}

.phui-oi-objname {
  color: {$blacktext};
  cursor: text;
  font-weight: bold;
}

.phui-oi-content {
  margin: 4px 8px 2px 0;
  overflow: hidden;
}

.phui-oi-grippable {
  cursor: move;
}

.device .phui-oi-grippable {
  cursor: normal;
}

.phui-oi-grip {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  width: 20px;
  background: url('/rsrc/image/texture/grip.png') center center no-repeat;
}

.phui-oi-ungrippable .phui-oi-grip {
  opacity: 0.25;
}

.device .phui-oi-grip {
  display: none;
}

.phui-oi-has-grip .phui-oi-frame {
  padding-left: 16px;
}

.device .phui-oi-grippable .phui-oi-frame {
  padding-left: 0;
}

.phui-oi-list-header {
  padding: 0 0 8px 0;
  color: {$darkgreytext};
}

.phui-oi-table {
  display: table;
  table-layout: fixed;
  width: 100%;
}

.phui-oi-table-row {
  display: table-row;
}

.phui-oi-col0 {
  width: 20px;
  display: table-cell;
  vertical-align: middle;
  padding-left: 4px;
}

.device-phone .phui-oi-col0 {
  vertical-align: top;
  padding-top: 8px;
}

.phui-oi-col1 {
  display: table-cell;
  vertical-align: top;
}

.phui-oi-col2 {
  width: 160px;
  display: table-cell;
  vertical-align: top;
}

.phui-oi-col2.phui-oi-side-column {
  width: 200px;
}

.device-phone .phui-oi-col1,
.device-phone .phui-oi-col2 {
  display: block;
  width: auto;
}

/* - Item Actions --------------------------------------------------------------

  Action buttons, like "Edit" and "Delete".

*/

.phui-oi-actions {
  position: absolute;
  right: 4px;
  top: 4px;
  bottom: 4px;
  vertical-align: middle;
  text-align: right;
}

.phui-oi-actions .phui-list-item-view {
  float: right;
  height: 100%;
  width: 24px;
  display: inline-block;
  position: relative;
}

.phui-oi-actions .phui-list-item-href {
  display: inline-block;
  position: relative;
  width: 24px;
  height: 100%;
}

.device-desktop .phui-oi-actions .phui-list-item-href:hover {
  background: {$hoverblue};
  border-radius: 3px;
}

.phui-oi-actions .phui-list-item-icon {
  width: 14px;
  height: 14px;
  position: absolute;
  display: block;
  top: 50%;
  margin-top: -7px;
  left: 3px;
}

.phui-oi-actions .phui-list-item-name {
  display: none;
}

.phui-oi-with-1-actions .phui-oi-content-box {
  margin-right: 28px;
  overflow: hidden;
}

.phui-oi-with-2-actions .phui-oi-content-box {
  margin-right: 54px;
  overflow: hidden;
}

.phui-oi-with-3-actions .phui-oi-content-box {
  margin-right: 76px;
  overflow: hidden;
}


/* - Object Box List -----------------------------------------------------------

  Tighter, stacking list when inside an Object Box

*/

.phui-object-box .phui-oi-list-view {
  padding: 0;
  border: none;
}

.phui-object-box .phui-oi-frame {
  border-right: none;
}

.phui-object-box .phui-oi:last-child
  .phui-oi-frame {
  border-bottom: none;
}


/* - Subhead -------------------------------------------------------------------

  Descriptive Text or Links under the main header, before attributes.

*/

.phui-oi-subhead {
  color: {$greytext};
  padding: 0 8px 6px;
}

.phui-oi-description {
  display: none;
}

.phui-oi-description.phui-oi-description-reveal {
  display: block;
}

.phui-oi-description-tag {
  margin-left: 4px;
}

.phui-oi-description-tag:hover .phui-tag-core {
  cursor: pointer;
  background: {$darkgreybackground};
}

.phui-oi-description-tag .phui-tag-core {
  border: none;
}

.phui-oi-description-tag.phui-tag-view .phui-icon-view {
  margin: 2px;
}


/* - Attribute List ------------------------------------------------------------

  Object attributes, commonly used to render created date, etc.

*/

.phui-oi-attributes {
  padding: 0 8px 6px;
  line-height: 18px;
  min-height: 21px;
}

.phui-oi-attribute {
  display: inline-block;
  color: {$greytext};
  vertical-align: top;
  margin-right: 4px;
}

.phui-oi-attribute-spacer {
  padding: 0 4px;
}


/* - Icons ---------------------------------------------------------------------

  Icons, which show object state. On mobile, they are rendered without labels
  to save space.

*/

.phui-object-icon-pane {
  margin: 8px 0 4px;
}

.device-phone .phui-object-icon-pane {
  margin: 0 0 4px;
}

.phui-oi-icons {
  padding: 0 4px 0 0;
}

.device-phone .phui-oi-icons {
  padding: 0 0 0 8px;
}

ul.phui-oi-icons {
  margin: 0;
}
/* ... */

